[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10"
version = "0.1.0"
name = "lambast"
description = "Los Alamos Model Bias Assessment and Statistical Toolkit"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "statsmodels",
    "pandas",
    "ruptures",
]
authors = [
    {name = "Natalie Elizabeth Klein", email = "neklein@lanl.gov"},
    {name = "Nidhi K Parikh", email = "nidhip@lanl.gov"},
    {name = "Samuel Thomas Wilkins Myren", email = "myrenst@lanl.gov"},
    {name = "Nishant Panda", email = "nishpan@lanl.gov"},
    {name = "Amber Joule Day", email = "aday@lanl.gov"},
]
maintainers = [
    {name = "Andrés Yagüe López", email = "ayaguelopez@lanl.gov"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/lanl/lambast"
